[gd_scene load_steps=10 format=1]

[ext_resource path="res://character_menu.gd" type="Script" id=1]
[ext_resource path="res://characters/human_male.scn" type="PackedScene" id=2]
[ext_resource path="res://characters/pedestal.msh" type="Mesh" id=3]
[ext_resource path="res://default_env.tres" type="Environment" id=4]
[ext_resource path="res://character_edit_panel.gd" type="Script" id=5]
[ext_resource path="res://character_panel.gd" type="Script" id=6]
[ext_resource path="res://fonts/ui_font.fnt" type="BitmapFont" id=7]
[ext_resource path="res://addons/gamejolt_api/gjapi.gd" type="Script" id=8]
[ext_resource path="res://addons/gamejolt_api/gj_icon.png" type="Texture" id=9]

[node name="root" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="model" type="Spatial" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="human_male" parent="model" instance=ExtResource( 2 )]

editor/display_folded = true

[node name="MeshInstance" type="MeshInstance" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.11186, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 3 )
mesh/skeleton = NodePath("..")
material/0 = null

[node name="Camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.982184, 0, -0.187922, -0.0114531, 0.998141, -0.0598602, 0.187573, 0.060946, 0.980358, -1.45881, 0.606358, 5.27355 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = ExtResource( 4 )
h_offset = 0.0
v_offset = 0.0

[node name="lights" type="Spatial" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.69935, 0, 0 )

[node name="sun" type="DirectionalLight" parent="lights"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.83856, -0.432205, 0.331685, 0, 0.608811, 0.793315, -0.544809, -0.665243, 0.510525, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 0.982208, 0.792969, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = true
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="sky" type="DirectionalLight" parent="lights"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.374519, -0.682924, 0.627177, -0.0837941, 0.698567, 0.710621, -0.923425, 0.213587, -0.318851, 7.25754, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 0.6
colors/diffuse = Color( 0.34375, 0.892334, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = true
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="sky2" type="DirectionalLight" parent="lights"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.581828, 0.613245, -0.534235, -0.0837941, 0.698567, 0.710621, 0.808983, -0.368694, 0.457832, 7.25754, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 0.2
colors/diffuse = Color( 0.27626, 0.996094, 0.371863, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = true
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="ui" type="MarginContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1022.0
margin/bottom = 603.0

[node name="character_edit_panel" type="HBoxContainer" parent="ui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = 0.0
margin/right = 1022.0
margin/bottom = 603.0
alignment = 0
script/script = ExtResource( 5 )

[node name="character_panel" type="Control" parent="ui/character_edit_panel"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 720.0
margin/bottom = 603.0
script/script = ExtResource( 6 )
__meta__ = { "_edit_group_":true }

[node name="HBoxContainer" type="VBoxContainer" parent="ui/character_edit_panel/character_panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 500.0
alignment = 0

[node name="Label" type="Label" parent="ui/character_edit_panel/character_panel/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 21.0
custom_fonts/font = ExtResource( 7 )
text = "Characters"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="ui/character_edit_panel/character_panel/HBoxContainer"]

rect/min_size = Vector2( 240, 360 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 25.0
margin/right = 240.0
margin/bottom = 452.0

[node name="ScrollContainer" type="ScrollContainer" parent="ui/character_edit_panel/character_panel/HBoxContainer/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 449.0
scroll/horizontal = true
scroll/vertical = true

[node name="characters" type="VBoxContainer" parent="ui/character_edit_panel/character_panel/HBoxContainer/Panel/ScrollContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ui/character_edit_panel/character_panel/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 456.0
margin/right = 240.0
margin/bottom = 476.0
alignment = 0

[node name="new_char" type="Button" parent="ui/character_edit_panel/character_panel/HBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 77.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New"
flat = false

[node name="edit_char" type="Button" parent="ui/character_edit_panel/character_panel/HBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 81.0
margin/top = 0.0
margin/right = 158.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Edit"
flat = false

[node name="delete_char" type="Button" parent="ui/character_edit_panel/character_panel/HBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 162.0
margin/top = 0.0
margin/right = 240.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Delete"
flat = false

[node name="play_btn" type="Button" parent="ui/character_edit_panel/character_panel/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 480.0
margin/right = 240.0
margin/bottom = 500.0
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play"
flat = false

[node name="character_attributes" type="Control" parent="ui/character_edit_panel"]

rect/min_size = Vector2( 290, 0 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
size_flags/stretch_ratio = 0.0
margin/left = 724.0
margin/top = 0.0
margin/right = 1014.0
margin/bottom = 603.0

[node name="VBoxContainer" type="VBoxContainer" parent="ui/character_edit_panel/character_attributes"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 281.0
margin/bottom = 136.0
alignment = 0

[node name="name" type="HBoxContainer" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

editor/display_folded = true
hint/tooltip = "What is your name\?"
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 281.0
margin/bottom = 24.0
alignment = 0

[node name="Label" type="Label" parent="ui/character_edit_panel/character_attributes/VBoxContainer/name"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 5.0
margin/right = 138.0
margin/bottom = 19.0
text = "Character Name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name_edit" type="LineEdit" parent="ui/character_edit_panel/character_attributes/VBoxContainer/name"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 142.0
margin/top = 0.0
margin/right = 281.0
margin/bottom = 24.0
placeholder/text = "name"
placeholder/alpha = 0.6
expand_to_len = false
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="external_lbl" type="Label" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 28.0
margin/right = 281.0
margin/bottom = 42.0
text = "External Attributes (0 to10)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="luck" type="HBoxContainer" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

editor/display_folded = true
hint/tooltip = "Luck in critical times"
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 46.0
margin/right = 281.0
margin/bottom = 62.0
alignment = 0

[node name="Label" type="Label" parent="ui/character_edit_panel/character_attributes/VBoxContainer/luck"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 1.0
margin/right = 138.0
margin/bottom = 15.0
text = "Luck"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="luck_slr" type="HSlider" parent="ui/character_edit_panel/character_attributes/VBoxContainer/luck"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 142.0
margin/top = 0.0
margin/right = 281.0
margin/bottom = 16.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
tick_count = 6
ticks_on_borders = false
focus_mode = 2

[node name="intimidation" type="HBoxContainer" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

editor/display_folded = true
hint/tooltip = "You versus others at first sight"
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 66.0
margin/right = 281.0
margin/bottom = 82.0
alignment = 0

[node name="Label" type="Label" parent="ui/character_edit_panel/character_attributes/VBoxContainer/intimidation"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 1.0
margin/right = 138.0
margin/bottom = 15.0
text = "Intimidation"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="intimidation_slr" type="HSlider" parent="ui/character_edit_panel/character_attributes/VBoxContainer/intimidation"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 142.0
margin/top = 0.0
margin/right = 281.0
margin/bottom = 16.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
tick_count = 6
ticks_on_borders = false
focus_mode = 2

[node name="resistance" type="HBoxContainer" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

editor/display_folded = true
hint/tooltip = "Resist negative forces"
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 86.0
margin/right = 281.0
margin/bottom = 102.0
alignment = 0

[node name="Label" type="Label" parent="ui/character_edit_panel/character_attributes/VBoxContainer/resistance"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 1.0
margin/right = 138.0
margin/bottom = 15.0
text = "Resistance"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resistance_slr" type="HSlider" parent="ui/character_edit_panel/character_attributes/VBoxContainer/resistance"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 142.0
margin/top = 0.0
margin/right = 281.0
margin/bottom = 16.0
range/min = 0.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
tick_count = 6
ticks_on_borders = false
focus_mode = 2

[node name="HSeparator" type="HSeparator" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 106.0
margin/right = 281.0
margin/bottom = 109.0

[node name="internal_lbl" type="Label" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 113.0
margin/right = 281.0
margin/bottom = 127.0
text = "Inernal Attributes (-5 to 5)"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="purity" type="HBoxContainer" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

hint/tooltip = "Purity of your soul"
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 131.0
margin/right = 281.0
margin/bottom = 147.0
alignment = 0

[node name="Label" type="Label" parent="ui/character_edit_panel/character_attributes/VBoxContainer/purity"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 1
margin/left = 0.0
margin/top = 1.0
margin/right = 138.0
margin/bottom = 15.0
text = "Purity"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="purity_slr" type="HSlider" parent="ui/character_edit_panel/character_attributes/VBoxContainer/purity"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 142.0
margin/top = 0.0
margin/right = 281.0
margin/bottom = 16.0
range/min = -10.0
range/max = 10.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = true
tick_count = 6
ticks_on_borders = false
focus_mode = 2

[node name="HSeparator2" type="HSeparator" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 151.0
margin/right = 281.0
margin/bottom = 154.0

[node name="create" type="Button" parent="ui/character_edit_panel/character_attributes/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 158.0
margin/right = 281.0
margin/bottom = 178.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create Character"
flat = false

[node name="GameJoltAPI" type="HTTPRequest" parent="."]

use_threads = true
body_size_limit = -1
max_redirects = 8
script/script = ExtResource( 8 )
__meta__ = { "_editor_icon":ExtResource( 9 ) }
private_key = "707dbf9c5377afafa5f15ea563bebfd3"
game_id = "211986"

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Log Out"
flat = false

[connection signal="create_character" from="ui/character_edit_panel" to="ui/character_edit_panel/character_panel" method="_on_character_edit_panel_create_character"]

[connection signal="pressed" from="ui/character_edit_panel/character_panel/HBoxContainer/HBoxContainer/new_char" to="ui/character_edit_panel/character_panel" method="_on_new_char_pressed"]

[connection signal="pressed" from="ui/character_edit_panel/character_panel/HBoxContainer/HBoxContainer/delete_char" to="ui/character_edit_panel/character_panel" method="_on_delete_char_pressed"]

[connection signal="pressed" from="ui/character_edit_panel/character_panel/HBoxContainer/play_btn" to="ui/character_edit_panel/character_panel" method="_on_play_btn_pressed"]

[connection signal="pressed" from="ui/character_edit_panel/character_attributes/VBoxContainer/create" to="ui/character_edit_panel" method="_on_create_pressed"]

[connection signal="api_data_fetched" from="GameJoltAPI" to="ui/character_edit_panel/character_panel" method="_on_GameJoltAPI_api_data_fetched"]

[connection signal="api_data_got_keys" from="GameJoltAPI" to="ui/character_edit_panel/character_panel" method="_on_GameJoltAPI_api_data_got_keys"]

[connection signal="api_data_set" from="GameJoltAPI" to="ui/character_edit_panel/character_panel" method="_on_GameJoltAPI_api_data_set"]

[connection signal="pressed" from="Button" to="." method="_on_logout"]


[editable path="model/human_male"]
